# formation_python_account_simulator

./: .gitignore  pyproject.toml
account/: internal.py  scenario1.py
account/tests/: test_blocked.py  test_internal.py
